#316: One more z-index fix.

--- a/app/assets/components/bl-badge-selector/bl-badge-selector.css
+++ b/app/assets/components/bl-badge-selector/bl-badge-selector.css
@@ -12,6 +12,7 @@
   .container {
     display: block;
     position: relative;
+    z-index: 0;
   }
   .container bl-badge {
     margin-bottom: 1em;
